syntax = "proto3";
package streams;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/alexandria-oss/streams/persistence";
option optimize_for = SPEED;

// A TransportMessage is a unit of information used by `streams` package to pass information between internal
// systems such as proxy agents.
message TransportMessage {
  string messageId = 1;
  string streamName = 2;
  string streamKey = 3;
  map<string,string> headers = 4;
  string contentType = 5;
  bytes data = 6;
  google.protobuf.Timestamp time = 7;
}

// A TransportMessageBatch is an aggregate of TransportMessage(s) used by `streams` package to pass information between
// internal systems such as proxy agents.
message TransportMessageBatch {
  repeated TransportMessage messages = 1;
}
